Added offline cache

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-    <div id="video-preview" class="centered">
+    <div id="video-preview">
         <header>        
             <img class="show-gallery-img" id="button-gallery-1" src="assets/icon-gallery.svg" alt="Bild" />
         </header>   
@@ -24,7 +24,7 @@
         </footer>
     </div>
 
-    <div id="photo-preview" class="centered">
+    <div id="photo-preview">
         <header>        
             <img class="show-gallery-img" id="button-gallery-2" src="assets/icon-gallery.svg" alt="Bild" />
         </header>        
@@ -34,7 +34,7 @@
         </footer>        
     </div>    
 
-    <div id="gallery-view" class="centered">
+    <div id="gallery-view">
         <header>        
             <img class="show-preview-img" src="assets/icon-camera.svg" alt="Bild" />
         </header>                
